--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/modern_theme.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    {% block extra_css %}{% endblock %}
     <style>
         /* Live Search Dropdown */
         #search-results-dropdown {
@@ -96,7 +97,8 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-glass sticky-top">
         <div class="container">
             <a class="navbar-brand" href="{% url 'dashboard' %}">
-                <i class="bi bi-lightning-charge-fill text-warning me-2"></i>WeSolar
+                <img src="{% static 'img/wesolar 2 back-logo.png' %}" alt="WeSolar" height="40"
+                    class="d-inline-block align-text-top">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -131,7 +133,6 @@
                     {% if user.groups.all.0.name == 'Field_Engineers' %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'create_survey' %}">New Survey</a></li>
                     {% endif %}
-
                     {% if user.groups.all.0.name == 'Installers' %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Installation</a></li>
                     {% endif %}
